--- a/ITPM WEB/WebContent/WEB-INF/web.xml
+++ b/ITPM WEB/WebContent/WEB-INF/web.xml
@@ -12,6 +12,6 @@
   <context-param>
     <description>File Upload Location.</description>
     <param-name>file_upload</param-name>
-    <param-value>git/CodeComplexityCalculator/CCC/WebContent/uploads/</param-value>
+    <param-value>C:\Users\Induvara\git\repository\ITPM WEB\WebContent\uploads\</param-value>
   </context-param>
 </web-app>
